- 
    Bug 
- 
    Resolution: Fixed
- 
    P2: Important 
- 
    6.7.1
- 
    None
- 
        8c2fa0330 (dev), 5080d0560 (6.8), 40b2c50dd (tqtc/lts-6.5)
In the example below, we get a warning about unresolved type, even though all types are available in qml and working correctly:
SampleDataStoreManagerSettingsSection {
    contentControl.contentItem: GridLayout {
        // ...
    }
}
component SampleDataStoreManagerSettingsSection: Column {
    property alias contentControl: sectionContentItem
    Control {
        id: sectionContentItem
        // ...
    }
}
} 
Warnings:
Warning: SettingsPage.qml:80:17: unknown grouped property scope contentControl. [unqualified]
                contentControl.contentItem: GridLayout {
                ^^^^^^^^^^^^^^
Warning: SettingsPage.qml:80:17: 'contentControl' is used but it is not resolved [unresolved-type]
                contentControl.contentItem: GridLayout {
                ^^^^^^^^^^^^^^
Warning: SettingsPage.qml:80:17: Type contentControl is used but it is not resolved [unresolved-type]
                contentControl.contentItem: GridLayout {
                ^^^^^^^^^^^^^^
| For Gerrit Dashboard: QTBUG-128632 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 598726,3 | QmlCompiler: Resolve regular group properties like generalized ones | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 | 
| 602060,2 | QmlCompiler: Resolve regular group properties like generalized ones | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 629874,2 | QmlCompiler: Resolve regular group properties like generalized ones | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |