QmlCompiler: Resolve regular group properties like generalized ones

They are mostly the same. We only need to search the local properties
rather than the IDs for the regular group properties. This allows us to
resolve group properties on aliases since aliases get resolved before
group properties.

Fixes: QTBUG-128632
Change-Id: I6f77a65499dd6bec29269f7b0974180fa76a749e
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
(cherry picked from commit 8c2fa03305c344c6a65d428ba1e9c05c2e65c281)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 5080d05609b40cff0d747023453fb0c6e692690e)
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>